@@ -45,11 +45,13 @@ public:
 
   /** Best model for a given numerical sample by BIC */
   static Distribution BestModelBIC(const Sample  & sample,
-                                   const DistributionFactoryCollection & factoryCollection);
+                                   const DistributionFactoryCollection & factoryCollection,
+				   Scalar & bestBICOut);
 
   /** Best model for a given numerical sample by BIC */
   static Distribution BestModelBIC(const Sample  & sample,
-                                   const DistributionCollection & distributionCollection);
+                                   const DistributionCollection & distributionCollection,
+				   Scalar & bestBICOut);
 
   /** Best model for a given numerical sample by Kolmogorov */
   static Distribution BestModelKolmogorov(const Sample  & sample,
