@@ -74,7 +74,7 @@
     "        # ~ non-parametric\n",
     "        continue\n",
     "    marginalFactories.append(factory)\n",
-    "estimated_marginals = [ot.FittingTest.BestModelBIC(sample.getMarginal(i), marginalFactories) for i in range(dimension)]\n",
+    "estimated_marginals = [ot.FittingTest.BestModelBIC(sample.getMarginal(i), marginalFactories)[0] for i in range(dimension)]\n",
     "estimated_marginals"
    ]
   },
@@ -186,7 +186,7 @@
     "    if factory.getImplementation().getClassName()=='BernsteinCopulaFactory':\n",
     "        continue\n",
     "    copulaFactories.append(factory)\n",
-    "estimated_copulas = [ot.FittingTest.BestModelBIC(sample.getMarginal(bloc), copulaFactories) for bloc in blocs]\n",
+    "estimated_copulas = [ot.FittingTest.BestModelBIC(sample.getMarginal(bloc), copulaFactories)[0] for bloc in blocs]\n",
     "estimated_copulas"
    ]
   },
